--- a/FakeAtlas/FakeAtlas.csproj
+++ b/FakeAtlas/FakeAtlas.csproj
@@ -15,6 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\cancelButton.png" />
+    <None Remove="Resources\earth.png" />
     <None Remove="Resources\info.png" />
     <None Remove="Resources\roadWInterFULLHD.jpg" />
   </ItemGroup>
@@ -28,10 +30,6 @@
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
-    <Page Update="Styles\Texts.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Update="Styles\Colors.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
@@ -40,8 +38,9 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.4">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -50,6 +49,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\cancelButton.png" />
+    <Resource Include="Resources\earth.png" />
     <Resource Include="Resources\info.png" />
     <Resource Include="Resources\roadWInterFULLHD.jpg" />
   </ItemGroup>
