Muzhyk smertelno zabolel. Poshel na boloto topitsya. Tolko prigotovilsya, vdrug lyagushka vynyrivaet...

--- a/FakeAtlas/FakeAtlas.csproj
+++ b/FakeAtlas/FakeAtlas.csproj
@@ -37,15 +37,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="EntityFramework" Version="6.4.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.5">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Utilities" Version="16.9.31024.71" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FakeAtlasMB\FA_EF_Core_Connection.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -53,6 +50,12 @@
     <Resource Include="Resources\earth.png" />
     <Resource Include="Resources\info.png" />
     <Resource Include="Resources\roadWInterFULLHD.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="FakeAtlasUIComponents\FakeAtlasMessageBox.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
 </Project>
