a bit simping? no i call it psychological impact in order to warp reality in favor of perception of the right prsn

--- a/FakeAtlas/FakeAtlas.csproj
+++ b/FakeAtlas/FakeAtlas.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FakeAtlasMB\FA_EF_Core_Connection.csproj" />
+    <ProjectReference Include="..\FA_EF_Core_Connection\FA_EF_Core_Connection.csproj" />
   </ItemGroup>
 
   <ItemGroup>
