--- a/FakeAtlas/FakeAtlas.csproj
+++ b/FakeAtlas/FakeAtlas.csproj
@@ -15,7 +15,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="Resources\cancelButton.png" />
     <None Remove="Resources\earth.png" />
     <None Remove="Resources\info.png" />
     <None Remove="Resources\roadWInterFULLHD.jpg" />
@@ -37,6 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ControlzEx" Version="5.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Utilities" Version="16.9.31024.71" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
   </ItemGroup>
@@ -46,7 +46,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Resources\cancelButton.png" />
     <Resource Include="Resources\earth.png" />
     <Resource Include="Resources\info.png" />
     <Resource Include="Resources\roadWInterFULLHD.jpg" />
