--- a/FakeAtlas/FakeAtlas.csproj
+++ b/FakeAtlas/FakeAtlas.csproj
@@ -7,6 +7,12 @@
     <ApplicationIcon>atlas (1).ico</ApplicationIcon>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile></DocumentationFile>
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="CustomElements\**" />
     <EmbeddedResource Remove="CustomElements\**" />
@@ -36,7 +42,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ControlzEx" Version="5.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Utilities" Version="16.9.31024.71" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
   </ItemGroup>
